objects/zisf__Zoom_Scheduler__c.object
<CustomObject>
    <fields>
        <fullName>zisf__Account_Job_Cron_Expr__c</fullName>
        <label>Account Job Cron Expr</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__Account_Job_Cron_ID__c</fullName>
        <label>Account Job Cron ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zisf__CronJobList__c</fullName>
        <label>CronJobList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zoom Scheduler</label>
    <listViews>
        <fullName>zisf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zoom Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>